--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.style {
   color: white;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 0.3px;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.style:hover {
+  -webkit-text-fill-color: white;
+  -webkit-text-stroke-width: 0px;
+
+}
+.style-white {
+  color: #222222 ;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 1px;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.style-white:hover {
+  -webkit-text-fill-color: #222222;
+  -webkit-text-stroke-width: 0px;
+
 }
+
